# fastapi-example

./: Makefile  main.py  pyproject.toml
.github/: dependabot.yml
